google image page added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td>Google Images</td>
+                    <td><a href="image_search.html">Images</a></td>
                     <td>Advanced Search</td>
                 </tr>
             </tbody>
