image search functionality ready

--- a/image_search.html
+++ b/image_search.html
@@ -30,9 +30,9 @@
     <div class="search_container">
         <form action="https://www.google.com/search">  <!-- "action" tells the browser that the data should be sent to that server / address-->
             <input id="search_bar" type="text" name="q">
+            <input type="hidden" name="tbm" value="isch">
             <div id="search_buttons">
-                <button id="button" type="submit">Google Search</button>
-                <button id="button">I'm Feeling Lucky</button>
+                <button id="image_search_button" type="submit">Google Search</button>
             </div>
         </form>
     </div>
