--- a/image_search.html
+++ b/image_search.html
@@ -32,7 +32,7 @@
             <input id="search_bar" type="text" name="q">
             <input type="hidden" name="tbm" value="isch">
             <div id="search_buttons">
-                <button id="image_search_button" type="submit">Google Search</button>
+                <button id="image_search_button" type="submit">Search Images</button>
             </div>
         </form>
     </div>
