top right link styling fixed

--- a/image_search.html
+++ b/image_search.html
@@ -13,8 +13,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td><a href="image_search.html">Images</a></td>
-                    <td>Advanced Search</td>
+                    <td><a href="index.html">Google Search</a></td>
                 </tr>
             </tbody>
         </table>
