lens icon added to lens-icon branch

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div class="search-bar-container">
                 <img id="search-icon" src="search-icon.png">
                 <input id="search_bar" type="text" name="q">
+                <img id="lens-icon" src="lens-icon.png">
             </div>
             <div id="search_buttons">
                 <button id="button" type="submit">Google Search</button>
