--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <tbody>
                 <tr>
                     <td><a href="image_search.html">Images</a></td>
-                    <td>Advanced Search</td>
+                    <td><a href="advanced_search.html">Advanced Search</a></td>
                 </tr>
             </tbody>
         </table>
