--- a/advanced_search.html
+++ b/advanced_search.html
@@ -22,29 +22,51 @@
             <div class="form-row">
                 <div class="form-col-1"><p id="form-heading-1">Find pages with...</p></div>
                 <div class="form-col-2"></div>
-                <div class="form-col-3"><p id="form-heading-2">To do this in the search box.</p></div>
+                <div class="form-col-3">
+                    <div class="form-col-3-td">
+                        <p id="form-heading-2">To do this in the search box.</p>
+                    </div>
+                </div>
             </div>
             <div class="form-row">
                 <div class="form-col-1">all these words:</div>
                 <div class="form-col-2"><input type="text" name=""></div>
-                <div class="form-col-3">Type the important words:
-                    <span class="examples"> tri-colour rat terrier</span>
+                <div class="form-col-3">
+                    <div class="form-col-3-td">
+                        Type the important words:
+                        <span class="examples"> tri-colour rat terrier</span>
+                    </div>
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-col-1">this exact word or phrase:</div>
                 <div class="form-col-2"><input type="text" name="" id=""></div>
-                <div class="form-col-3">Put exact words in quotes: "rat terrier"</div>
+                <div class="form-col-3">
+                    <div class="form-col-3-td">
+                        Put exact words in quotes:
+                        <span class="examples"> "rat terrier"</span>
+                    </div>
+                </div>
             </div>
             <div class="form-row">
                 <div class="form-col-1">any of these words:</div>
                 <div class="form-col-2"><input type="text" name="" id=""></div>
-                <div class="form-col-3">Type OR between all the words you want: miniature OR standard</div>
+                <div class="form-col-3">
+                    <div class="form-col-3-td">
+                        Type OR between all the words you want:
+                        <span class="examples">miniature OR standard</span>
+                    </div>
+                </div>
             </div>
             <div class="form-row">
                 <div class="form-col-1">none of these words:</div>
                 <div class="form-col-2"><input type="text" name="" id=""></div>
-                <div class="form-col-3">Put a minus sign just before words that you don't want:<span class="examples"> -rodent, -"Jack Russell"</span></div>
+                <div class="form-col-3">
+                    <div class="form-col-3-td">
+                        Put a minus sign just before words that you don't want:
+                        <span class="examples"> -rodent, -"Jack Russell"</span>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
