--- a/advanced_search.html
+++ b/advanced_search.html
@@ -68,6 +68,13 @@
                     </div>
                 </div>
             </div>
+            <div class="form-row">
+                <div class="form-col-1"></div>
+                <div class="form-col-2">
+                    <input id="advanced-search-button" type="submit" value="Advanced Search">
+                </div>
+                <div class="form-col-3"></div>
+            </div>
         </form>
     </div>
 </body>
