advanced search ready

--- a/advanced_search.html
+++ b/advanced_search.html
@@ -18,7 +18,7 @@
     </div>
     <div class="separator"></div>
     <div class="form">
-        <form action="">
+        <form action="https://www.google.com/search">
             <div class="form-row">
                 <div class="form-col-1"><p id="form-heading-1">Find pages with...</p></div>
                 <div class="form-col-2"></div>
@@ -30,7 +30,7 @@
             </div>
             <div class="form-row">
                 <div class="form-col-1">all these words:</div>
-                <div class="form-col-2"><input type="text" name=""></div>
+                <div class="form-col-2"><input type="text" name="as_q"></div>
                 <div class="form-col-3">
                     <div class="form-col-3-td">
                         Type the important words:
@@ -40,7 +40,7 @@
             </div>
             <div class="form-row">
                 <div class="form-col-1">this exact word or phrase:</div>
-                <div class="form-col-2"><input type="text" name="" id=""></div>
+                <div class="form-col-2"><input type="text" name="as_epq"></div>
                 <div class="form-col-3">
                     <div class="form-col-3-td">
                         Put exact words in quotes:
@@ -50,7 +50,7 @@
             </div>
             <div class="form-row">
                 <div class="form-col-1">any of these words:</div>
-                <div class="form-col-2"><input type="text" name="" id=""></div>
+                <div class="form-col-2"><input type="text" name="as_oq"></div>
                 <div class="form-col-3">
                     <div class="form-col-3-td">
                         Type OR between all the words you want:
@@ -60,7 +60,7 @@
             </div>
             <div class="form-row">
                 <div class="form-col-1">none of these words:</div>
-                <div class="form-col-2"><input type="text" name="" id=""></div>
+                <div class="form-col-2"><input type="text" name="as_eq"></div>
                 <div class="form-col-3">
                     <div class="form-col-3-td">
                         Put a minus sign just before words that you don't want:
@@ -77,5 +77,6 @@
             </div>
         </form>
     </div>
+    <div class="separator"></div>
 </body>
 </html>
