--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div id="search_buttons">
                 <button id="button" type="submit">Google Search</button>
-                <button id="button">I'm Feeling Lucky</button>
+                <button id="button" type="submit" name="btnI">I'm Feeling Lucky</button>
             </div>
         </form>
     </div>
